2004-07-02  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fix kernel hang on mkfifo under 2.4 kernels (spotted and patch
	by Mattias Wadman)

	* Fix file offset wrap around at 4G when doing large reads

	* Change passing fuse include dir to 2.6 kernel make system more
	robust (hopefully fixes problems seen on SuSE 9.1)

	* Fix deadlock between page writeback completion and truncate
	(bug found by Valient Gough with the fsx-linux utility)


2004-06-22  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Released 1.2
	
2004-06-22  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Add FS_BINARY_MOUNTDATA filesystem flag for kernels that define
	it.  This fixes mount problems on recent 2.6 kernels with SELinux
	enabled
	
	* Merge bugfixes from main branch (see below)
	
2004-04-09  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Check some limits so userspace won't get too big requests

2004-04-05  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Kill compile warning

2004-03-02  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fix for uClinux (Christian Magnusson)

2004-02-12  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Remove MS_PERMISSION mount flag (that means something else now)
	
2004-02-10  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Added check for i_size_read/write functions to configure.in
	(patch by Valient Gough)

2004-02-06  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fixed writing >= 2G files

	* Check file size on open (with generic_file_open())

	* Readpage calls flush_dcache_page() after storing data

	* Use i_size_read/write for accessing inode->i_size

	* Make loopback mount of a fuse file work
	
2004-02-04  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Released 1.1
	
2004-01-29  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Properly check if the inode exists in fuse_invalidate
	
2004-01-27  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Added -q option for fusermount

	* fuse_unmount() now uses -q option of fusermount, so no error is
	printed if the cause of the program exit is that the filesystem