@@ -16,13 +16,6 @@
 
 #ifndef KERNEL_2_6
 #define PageUptodate(page) Page_Uptodate(page)
-#ifndef filemap_fdatawrite
-#ifndef NO_MM
-#define filemap_fdatawrite filemap_fdatasync
-#else
-#define filemap_fdatawrite do {} while(0)
-#endif
-#endif
 #endif
 
 static int fuse_open(struct inode *inode, struct file *file)
@@ -65,6 +58,19 @@ static int fuse_open(struct inode *inode, struct file *file)
 	return out.h.error;
 }
 
+void fuse_sync_inode(struct inode *inode)
+{
+#ifdef KERNEL_2_6
+	filemap_fdatawrite(inode->i_mapping);
+	filemap_fdatawait(inode->i_mapping);
+#else
+#ifndef NO_MM
+	filemap_fdatasync(inode->i_mapping);
+	filemap_fdatawait(inode->i_mapping);
+#endif
+#endif
+}
+
 static int fuse_release(struct inode *inode, struct file *file)
 {
 	struct fuse_conn *fc = INO_FC(inode);
@@ -73,7 +79,7 @@ static int fuse_release(struct inode *inode, struct file *file)
 	unsigned int s = sizeof(struct fuse_in) + sizeof(struct fuse_open_in);
 
 	if(file->f_mode & FMODE_WRITE)
-		filemap_fdatawrite(inode->i_mapping);
+		fuse_sync_inode(inode);
 
 	in = kmalloc(s, GFP_NOFS);
 	if(!in)
